--- a/demo/index.html
+++ b/demo/index.html
@@ -48,7 +48,7 @@
                 <p>Supported browsers: <a href="http://www.opera.com">Opera</a>, <a href="http://www.mozilla.com">Firefox</a>, <a href="http://www.apple.com/safari">Safari</a>, and <a href="http://www.konqueror.org">Konqueror</a>.</p>
             </canvas><br/>
             <button class="btn btn-primary action">Decode</button>
-            <button class="btn clear">Clear canvas</button>
+            <button class="btn clear">Clear</button>
         </script>
         
         <script id="preconditionFailed" type="text/template">
@@ -98,6 +98,7 @@
            .script("http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.3.3/underscore-min.js")
            .script("scripts/bootstrap.min.js").wait()
            .script("http://cdnjs.cloudflare.com/ajax/libs/backbone.js/0.9.2/backbone-min.js").wait()
+           .script("scripts/training-set-db.js").wait()
            .script("scripts/main.js");
         </script>
     </body>
