--- a/demo/index.html
+++ b/demo/index.html
@@ -56,7 +56,7 @@
         </script>
         
         <script id="result" type="text/template">
-            <h3><span class="result"><%= result %></span>.</h3>
+            <h3><span class="result"><%= result %></span></h3>
         </script>
 
         <script id="traingSetView" type="text/template">
