Added the possibility to draw in canvas preset glyphs.

--- a/demo/index.html
+++ b/demo/index.html
@@ -49,6 +49,7 @@
             </canvas><br/>
             <button class="btn btn-primary action">Decode</button>
             <button class="btn clear">Clear</button>
+            <div class="preset-glyphs"><label for="preset-glyph"><strong>Preset glyphs:</strong></label><select name="glyph" id="preset-glyph" class="span2"><option value="">Please select...</option></select></div>
         </script>
         
         <script id="preconditionFailed" type="text/template">
